--- a/index.htm
+++ b/index.htm
@@ -1,110 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Medla — The Future Moves Now</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #000;
-      color: gold;
-    }
-    header, section {
-      padding: 40px;
-      text-align: center;
-    }
-    header {
-      background: linear-gradient(to right, #111, #222);
-    }
-    h1 {
-      font-size: 3em;
-      margin-bottom: 0.2em;
-    }
-    nav a {
-      color: gold;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .section {
-      background-color: #111;
-      margin-bottom: 20px;
-      border-radius: 20px;
-      box-shadow: 0 0 15px gold;
-    }
-    .features-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
-    }
-    .feature-card {
-      background-color: #222;
-      border-radius: 15px;
-      padding: 20px;
-      width: 250px;
-      box-shadow: 0 0 10px gold;
-    }
-    footer {
-      background-color: #111;
-      padding: 20px;
-      font-size: 0.9em;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Medla | Futuristic Car Company</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #000000; /* Black background */
+            color: #FFD700; /* Gold text color */
+        }
+
+        header {
+            background-color: #000000;
+            text-align: center;
+            padding: 20px;
+            color: #FFD700;
+        }
+
+        h1 {
+            font-size: 48px;
+        }
+
+        nav {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        nav a {
+            color: #FFD700;
+            text-decoration: none;
+            font-size: 20px;
+            margin: 0 15px;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        .content {
+            padding: 40px;
+            text-align: center;
+        }
+
+        .donation-section {
+            background-color: #000000;
+            color: #FFD700;
+            text-align: center;
+            padding: 20px;
+            border-radius: 10px;
+            margin: 20px 0;
+        }
+
+        .donate-button {
+            background-color: #FFD700;
+            border: none;
+            padding: 10px 20px;
+            font-size: 18px;
+            cursor: pointer;
+            color: black;
+            font-weight: bold;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .donate-button:hover {
+            background-color: #ffcc00;
+        }
+
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Medla</h1>
-    <p>The Future Moves Now</p>
+    <header>
+        <h1>Welcome to Medla</h1>
+        <p>The Future of Automotive Innovation</p>
+    </header>
+
     <nav>
-      <a href="#about">About</a>
-      <a href="#concepts">Car Concepts</a>
-      <a href="#book">Engineering Book</a>
-      <a href="#features">Cool Features</a>
-      <a href="#contact">Join</a>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Car Concepts</a>
+        <a href="#">Contact</a>
     </nav>
-  </header>
 
-  <section id="about" class="section">
-    <h2>About Medla</h2>
-    <p>Medla is built by a young visionary passionate about designing futuristic, fast, and smart electric cars. Our mission is to lead the future of mobility with bold ideas and innovation.</p>
-  </section>
-
-  <section id="concepts" class="section">
-    <h2>Car Concepts</h2>
-    <p>Explore the Medla Phantom and upcoming innovations featuring high-end design, electric performance, and powerful tech integration.</p>
-  </section>
-
-  <section id="book" class="section">
-    <h2>Medla Engineering Book</h2>
-    <p>Discover all of Medla’s lessons and ideas in mechanical, automotive, and electrical engineering. <br />[Flipbook or PDF coming soon]</p>
-  </section>
-
-  <section id="features" class="section">
-    <h2>Cool Features</h2>
-    <div class="features-grid">
-      <div class="feature-card">Smart Sensors</div>
-      <div class="feature-card">AR Windshield</div>
-      <div class="feature-card">Solar Charging</div>
-      <div class="feature-card">Noise Cancellation</div>
-      <div class="feature-card">Voice AI & Cruise Control</div>
+    <div class="content">
+        <h2>Innovating the Future of Cars</h2>
+        <p>Medla is here to change the world of automobiles with our cutting-edge technology and futuristic designs. Join us on our journey to revolutionize the car industry!</p>
+        
+        <!-- Donation Section -->
+        <div class="donation-section">
+            <h2>Support Medla</h2>
+            <p>Your donation helps us bring futuristic and innovative cars like Medla to life. Thank you for your support!</p>
+            
+            <!-- PayPal Donation Button -->
+            <form action="https://www.paypal.com/donate" method="post" target="_top">
+                <input type="hidden" name="hosted_button_id" value="YOUR_BUTTON_ID_HERE">
+                <input type="submit" value="Donate Now" class="donate-button">
+            </form>
+        </div>
     </div>
-  </section>
 
-  <section id="contact" class="section">
-    <h2>Join the Medla Journey</h2>
-    <p>Have an idea? Want to join the mission? Let us know!</p>
-    <form>
-      <input type="text" placeholder="Your message" style="padding: 10px; width: 60%; margin-top: 10px;" />
-      <br />
-      <button type="submit" style="padding: 10px 20px; margin-top: 10px; background-color: gold; color: black; border: none; border-radius: 5px;">Send</button>
-    </form>
-  </section>
-
-  <footer>
-    &copy; 2025 Medla. Designed for the future.
-  </footer>
+    <footer>
+        <p>&copy; 2025 Medla Cars. All rights reserved.</p>
+    </footer>
 </body>
 </html>
