--- a/index.htm
+++ b/index.htm
@@ -100,6 +100,15 @@
                 <input type="submit" value="Donate Now" class="donate-button">
             </form>
         </div>
+
+        <h2>About Medla</h2>
+        <p>Medla is focused on creating a world where cars are as intelligent as they are powerful. With cutting-edge features like self-driving technology, autonomous systems, and futuristic designs, Medla is setting the standard for the future of the automotive industry.</p>
+
+        <h2>Car Concepts</h2>
+        <p>Explore our exciting car concepts, including the Medla Phantom, a vehicle that redefines speed, safety, and design. Built to perfection, it is the car of tomorrow, available today!</p>
+
+        <h2>Cool Features</h2>
+        <p>Medla cars come with a range of amazing features like adaptive suspension systems, solar-powered charging, smart connectivity, and more. Our cars are built to be not just vehicles, but technological marvels.</p>
     </div>
 
     <footer>
